--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,32 @@ header{
     height :100vh;
     background-color: #2196F3;
     color:white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 
+}
+section div p{
+    text-align: left;
+}
+ol li{
+    font-size: 20px;
+}
+form div{
+    margin:5px;
 }
 h1{
     font-size: 50px;
     color:#2196F3;
 }
 header h1{
-    margin:0;
     color:white;
+    text-align: center;
 }
 .button{
+    margin: 15px;
     height:40px;
     width: 140px;
     border:none;
@@ -41,6 +56,12 @@ section{
     border: 1px solid grey;
     border-radius:20px;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
+
 }
 .submit{
     height: 40px;
@@ -58,5 +79,29 @@ input{
     border-radius: 5px;
     border:1px solid lightgray;
     height : 25px;
+
+}
+footer{
+    height:124px;
+    background-color: black;
+    color:lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    
+}
+.fixedbutton{
+    position: fixed;
+    bottom: 10px;
+    right:10px;
+    height:70px;
+    width:70px;
+    border:none;
+    border-radius:50%;
+    cursor:pointer;
+    color:white;
+    background-color:#2196F3;
 
 }
