--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,11 @@ header{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-
+}
+.modification{
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 section div p{
     text-align: left;
